Fix width of screen on search page on mobile

--- a/src/ui_components/search/SearchResults.css
+++ b/src/ui_components/search/SearchResults.css
@@ -1,10 +1,15 @@
 
 .search-results-table
 {
-    max-width: 50%;
-    min-width: 400px;
     display: flex;
     flex-direction: column;
+}
+@media (min-width: 800px)
+{
+    .search-results-table
+    {
+        max-width: 50%;
+    }
 }
 
 .search-results-table .result-row
